<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_waitingame"
        android:name="com.example.androidprojectshoppinglist.ui.waitingame.WaitinggameFragment"
        android:label="@string/title_waitinggame"
        tools:layout="@layout/fragment_waitinggame" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidprojectshoppinglist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shoppinglist"
        android:name="com.example.androidprojectshoppinglist.ui.shoppinglist.ShoppinglistFragment"
        android:label="@string/title_shoppinglist"
        tools:layout="@layout/fragment_shoppinglist" >
        <action
            android:id="@+id/action_navigation_shoppinglist_to_shoppinglist_add_item_fragment"
            app:destination="@id/navigation_shoppinglist_add_item_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shoppinglist_add_item_fragment"
        android:name="com.example.androidprojectshoppinglist.ui.shoppinglistAddItem.ShoppinglistAddItemFragment"
        android:label="Add item" >
        <action
            android:id="@+id/action_navigation_shoppinglist_add_item_fragment_to_navigation_shoppinglist"
            app:destination="@id/navigation_shoppinglist" />
    </fragment>
</navigation>